--- a/Raul/static/Raul/CSS/landingCSS.css
+++ b/Raul/static/Raul/CSS/landingCSS.css
@@ -190,8 +190,8 @@ a{
 
 a .container{
     height:200px;
-    margin-left:auto;
-    margin-right: auto;
+    /* margin-left:auto;
+    margin-right: auto; */
     padding-top:50px;
     transition: 0.5s ease-in-out;
     z-index: 5;
@@ -201,7 +201,7 @@ a .container{
 }
 
 a .container p{
-    background-color: rgba(0,0,0,0.9);
+    /* background-color: rgba(0,0,0,0.9); */
     margin-block-end: 0;
     margin-block-start: 0;
     margin-inline-end: 0;
@@ -211,50 +211,50 @@ a .container p{
     margin-left:auto;
     margin-right: auto;
 }
-
+/* 
 .bigContainer2 a #raulBanner #raul{
     margin:0px 50px;
-}
+} */
 
 a #raulAvila{
     text-align: center;
     width: 30em;
     height: 6em;
     z-index:99;
-    margin-top:100px;
+    margin-top:-40px;
 }
 
 a #raulAvila img{
-    width: 100%;
-    margin-top: 10px;
+    width: 78%;
+    margin: 0px 0px 0px 20px;
     align-self: center;
     margin-left: auto;
     margin-right: auto;
 }
 
 a #raul{
-    text-align: center;
+    text-align: left;
     width: 15em;
     height: 6em;
     z-index:99;
+    margin:0 5rem 0 0;
+   
 }
 
 a #raul img{
-    align-self: center;
     width: 55%;
     margin-top:-20px;
-    margin-left: auto;
-    margin-right: auto;
 }
 
 a #cafe{
-   width:15em;
-   height: 6em;
-   z-index:99;
+    text-align: right;
+    width:15em;
+    height: 6em;
+    z-index:99;
+    margin:0px 0px 0px 16rem;
 }
 
 a #cafe img{
-   align-self: center;
    width:100%;
    padding-top:15px;
 }
