--- a/Raul/templates/Raul/base.html
+++ b/Raul/templates/Raul/base.html
@@ -36,7 +36,7 @@
 
 <body>
 
-    <div class = "headers" id="headerOnScroll" style="background-color: #333333;">
+    <div class = "headers" id="headerOnScroll" style="background-color: #6d6d6d;">
         <figure id="figureOnScroll">
 
             <div class="navbarIcons">
@@ -85,7 +85,7 @@
 
         </figure>
 
-        <div class="category" id="hideOnScroll" style="background-color: #333333;">
+        <div class="category" id="hideOnScroll" style="background-color: #6d6d6d;">
 
             <p id="categoryP" style="color:white;"> New Arrivals </p>
 
