--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -602,6 +602,7 @@
 
     <div id="Furniture" class="tabcontent">
         <div class="tabSection">
+            
             <div class="tabText">
                 <div class="headingTab">
                     furniture
@@ -609,14 +610,15 @@
                 <button>shop now</button>
             </div>
             <div class="tabImagesRow">
-                <div class="tabImagesColumn">
+                <!-- <div class="tabImagesColumn">
                     <img src="{% static 'Raul/Images/furniture.jpg' %}" draggable="false" alt="Furniture Photo" width="93%">
                     <img src="{% static 'Raul/Images/furniture2.jpg' %}" draggable="false" alt="Furniture Photo" width="93%">
                     <img src="{% static 'Raul/Images/furniture3.jpg' %}" draggable="false" alt="Furniture Photo" width="93%">
                     <img src="{% static 'Raul/Images/furniture4.jpg' %}" draggable="false" alt="Furniture Photo" width="93%">
-                </div>
-                <img src="{% static 'Raul/Images/6.jpg' %}" draggable="false" alt="Furniture Photo" width="100%">
+                </div> -->
+                <img src="{% static 'Raul/Images/FurnitureFinalI.jpg' %}" draggable="false" alt="Furniture Photo" width="100%">
             </div>
+            
         </div>
     </div>
       
@@ -629,13 +631,14 @@
                 <button>shop now</button>
             </div>
             <div class="tabImagesRow">
-                <div class="tabImagesColumn">
+                <!-- <div class="tabImagesColumn">
                     <img src="{% static 'Raul/Images/floral.jpg' %}" draggable="false" alt="Furniture Photo" width="93%">
                     <img src="{% static 'Raul/Images/floral2.jpg' %}" draggable="false" alt="Furniture Photo" width="93%">
                     <img src="{% static 'Raul/Images/floral4.jpg' %}" draggable="false" alt="Furniture Photo" width="93%">
                     <img src="{% static 'Raul/Images/floral3.jpg' %}" draggable="false" alt="Furniture Photo" width="93%">
                 </div>
-                <img src="{% static 'Raul/Images/8.jpg' %}" draggable="false" alt="Furniture Photo" width="100%">
+                <img src="{% static 'Raul/Images/8.jpg' %}" draggable="false" alt="Furniture Photo" width="100%"> -->
+                <img src="{% static 'Raul/Images/FurnitureFinalI.jpg' %}" draggable="false" alt="Furniture Photo" width="100%">
             </div>
         </div>
     </div>
@@ -649,13 +652,14 @@
                 <button>shop now</button>
             </div>
             <div class="tabImagesRow">
-                <div class="tabImagesColumn">
+                <!-- <div class="tabImagesColumn">
                     <img src="{% static 'Raul/Images/lighting.jpg' %}" draggable="false" alt="Furniture Photo" width="93%">
                     <img src="{% static 'Raul/Images/lighting2.jpg' %}" draggable="false" alt="Furniture Photo" width="93%">
                     <img src="{% static 'Raul/Images/lighting3.jpg' %}" draggable="false" alt="Furniture Photo" width="93%">
                     <img src="{% static 'Raul/Images/lighting4.jpg' %}" draggable="false" alt="Furniture Photo" width="93%">
                 </div>
-                <img src="{% static 'Raul/Images/1.jpg' %}" draggable="false" alt="Furniture Photo" width="100%">
+                <img src="{% static 'Raul/Images/1.jpg' %}" draggable="false" alt="Furniture Photo" width="100%"> -->
+                <img src="{% static 'Raul/Images/FurnitureFinalI.jpg' %}" draggable="false" alt="Furniture Photo" width="100%">
             </div>
             
         </div>
@@ -670,13 +674,14 @@
                 <button>shop now</button>
             </div>
             <div class="tabImagesRow">
-                <div class="tabImagesColumn">
+                <!-- <div class="tabImagesColumn">
                     <img src="{% static 'Raul/Images/wallart3.jpg' %}" draggable="false" alt="Furniture Photo" width="93%">
                     <img src="{% static 'Raul/Images/wallart2.jpg' %}" draggable="false" alt="Furniture Photo" width="93%">
                     <img src="{% static 'Raul/Images/wallart4.jpg' %}" draggable="false" alt="Furniture Photo" width="93%">
                     <img src="{% static 'Raul/Images/wallart.jpg' %}" draggable="false" alt="Furniture Photo" width="93%">
                 </div>
-                <img src="{% static 'Raul/Images/2.jpg' %}" draggable="false" alt="Furniture Photo" width="100%">
+                <img src="{% static 'Raul/Images/2.jpg' %}" draggable="false" alt="Furniture Photo" width="100%"> -->
+                <img src="{% static 'Raul/Images/FurnitureFinalI.jpg' %}" draggable="false" alt="Furniture Photo" width="100%">
             </div>
             
         </div>
@@ -691,13 +696,14 @@
                 <button>shop now</button>
             </div>
             <div class="tabImagesRow">
-                <div class="tabImagesColumn">
+                <!-- <div class="tabImagesColumn">
                     <img src="{% static 'Raul/Images/tabletop.jpg' %}" draggable="false" alt="Furniture Photo" width="93%">
                     <img src="{% static 'Raul/Images/tabletop2.jpg' %}" draggable="false" alt="Furniture Photo" width="93%">
                     <img src="{% static 'Raul/Images/tabletop3.jpg' %}" draggable="false" alt="Furniture Photo" width="93%">
                     <img src="{% static 'Raul/Images/tabletop4.jpg' %}" draggable="false" alt="Furniture Photo" width="93%">
                 </div>
-                <img src="{% static 'Raul/Images/3.jpg' %}" draggable="false" alt="Furniture Photo" width="100%">
+                <img src="{% static 'Raul/Images/3.jpg' %}" draggable="false" alt="Furniture Photo" width="100%"> -->
+                <img src="{% static 'Raul/Images/FurnitureFinalI.jpg' %}" draggable="false" alt="Furniture Photo" width="100%">
             </div>
         </div>
     </div>
@@ -705,20 +711,20 @@
     <div id="DecAcc" class="tabcontent">
         <div class="tabSection">
             <div class="tabText">
-                <div class="headingTab">
-                    furniture
+                <div class="headingTab" id ="decorativeHeading">
+                    decorative 
                 </div>
                 <button>shop now</button>
             </div>
             <div class="tabImagesRow">
-                <div class="tabImagesColumn">
+                <!-- <div class="tabImagesColumn">
                     <img src="{% static 'Raul/Images/furniture.jpg' %}" draggable="false" alt="Furniture Photo" width="93%">
                     <img src="{% static 'Raul/Images/furniture2.jpg' %}" draggable="false" alt="Furniture Photo" width="93%">
                     <img src="{% static 'Raul/Images/furniture3.jpg' %}" draggable="false" alt="Furniture Photo" width="93%">
                     <img src="{% static 'Raul/Images/furniture4.jpg' %}" draggable="false" alt="Furniture Photo" width="93%">
                 </div>
-            
-                <img src="{% static 'Raul/Images/6.jpg' %}" draggable="false" alt="Furniture Photo" width="100%">
+                <img src="{% static 'Raul/Images/6.jpg' %}" draggable="false" alt="Furniture Photo" width="100%"> -->
+                <img src="{% static 'Raul/Images/FurnitureFinalI.jpg' %}" draggable="false" alt="Furniture Photo" width="100%">
             </div>
         </div>
     </div>
