--- a/Raul/templates/Raul/product.html
+++ b/Raul/templates/Raul/product.html
@@ -18,7 +18,7 @@
 <body>
 <div class="productBanner">
     <div class="productBanner-heading">
-        Products
+        <p>Products</p>
     </div>
     <div class="arrowDown">
         <a href="#scrollHere"><img src="{%static 'Raul/Images/arrowDown.png' %}" width="3%"></a>
