--- a/Raul/templates/Raul/single_product.html
+++ b/Raul/templates/Raul/single_product.html
@@ -10,10 +10,14 @@
             width: 100%;
             margin: 0;
             font-family: 'Roboto', sans-serif;
-            color:#cfbb63;
         }
 
-        a{color:#cfbb63;}
+        a{
+            
+        background: -webkit-linear-gradient(#f8f18e,#d6a55b);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        }
 
         .containers1{
             margin:150px auto 100px auto;
@@ -48,19 +52,31 @@
             letter-spacing: 1px;
             text-transform: uppercase;
             text-decoration: none;
+            
+	background: -webkit-linear-gradient(#f8f18e,#d6a55b);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
         }
 
         .product-description h1 {
-            font-weight: 300;
-            font-size: 52px;
+            font-weight: 700;
+            font-size: 60px;
             letter-spacing: 5px;
             margin-block-start: 15px;
             margin-block-end: 10px;
+            
+            background: -webkit-linear-gradient(#f8f18e,#d6a55b);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
         }
         .product-description p {
-            font-size: 16px;
+            font-size: 22px;
             font-weight: 300;
             line-height: 24px;
+            
+            background: -webkit-linear-gradient(#f8f18e,#d6a55b);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
         }
 
         .product-configuration form{
@@ -134,12 +150,18 @@
         .product-price{
             text-align: left;
             padding:10px 0px;
-            font-size: 20px;
+            font-size: 25px;
+            font-weight: 700;
+            
+        background: -webkit-linear-gradient(#f8f18e,#d6a55b);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
         }
         .product-description hr{
             width:80%;
-            border-top: 1px solid #cfbb63;
+            color:#cfbb63;
             background-color: #cfbb63;
+            border: 1px;
             outline: none;
             border-style: solid;
             margin-bottom: 50px;
