navbar links clickable

--- a/Raul/templates/Raul/base.html
+++ b/Raul/templates/Raul/base.html
@@ -86,22 +86,21 @@
         </figure>
 
         <div class="category" id="hideOnScroll" style="background-color: #6d6d6d;">
+            <p id="categoryP"><a style="color: white" href="{% url 'sec-view' 'New Arrivals' %}">New Arrivals</a></p>
 
-            <p id="categoryP" style="color:white;"> New Arrivals </p>
+            <p id="categoryP"><a style="color: white" href="{% url 'sec-view' 'Decorative Accessories' %}">Decorative Accessories</a></p>
 
-            <p id="categoryP" style="color:white;"> Decorative Accessories</p>
+            <p id="categoryP"><a style="color: white" href="{% url 'sec-view' 'Tabletop' %}">Tabletop</a></p>
 
-            <p id="categoryP" style="color:white;">Tabletop</p>
+            <p id="categoryP"><a style="color: white" href="{% url 'sec-view' 'Furniture' %}">Furniture</a></p>
 
-            <p id="categoryP" style="color:white;">Furniture</p>
+            <p id="categoryP"><a style="color: white" href="{% url 'sec-view' 'Floral' %}">Floral</a></p>
 
-            <p id="categoryP" style="color:white;">Floral</p>
+            <p id="categoryP"><a style="color: white" href="{% url 'sec-view' 'Wall Art' %}">Wall Art</a></p>
 
-            <p id="categoryP" style="color:white;">Wall Art</p>
+            <p id="categoryP"><a style="color: white" href="{% url 'Raul-product' %}">All Products</a></p>
 
-            <p id="categoryP" style="color:white;">All Products</p>
-
-            <p id="categoryP" style="color:white;">Sale</p>
+            <p id="categoryP"><a style="color: white" href="{% url 'sec-view' 'Sale' %}">Sale</a></p>
 
             <p id="categoryP" style="color:white;">Venue Bookings</p>
 
