--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -136,23 +136,23 @@
 
         <div class="category" id="hideOnScroll">
 
-            <p id="categoryP"> New Arrival </p>
+            <p id="categoryP"><a style="color: white" href="{% url 'sec-view' 'New Arrivals' %}">New Arrivals</a></p>
 
-            <p id="categoryP"> Decorative Accessories</p>
+            <p id="categoryP"><a style="color: white" href="{% url 'sec-view' 'Decorative Accessories' %}">Decorative Accessories</a></p>
             
-            <p id="categoryP">Tabletop</p>
-            
-            <p id="categoryP">Furniture</p>
+            <p id="categoryP"><a style="color: white" href="{% url 'sec-view' 'Tabletop' %}">Tabletop</a></p>
 
-            <p id="categoryP">Floral</p>
-            
-            <p id="categoryP">Wall Art</p>
+            <p id="categoryP"><a style="color: white" href="{% url 'sec-view' 'Furniture' %}">Furniture</a></p>
 
-            <p id="categoryP">All Products</p>
+            <p id="categoryP"><a style="color: white" href="{% url 'sec-view' 'Floral' %}">Floral</a></p>
+
+            <p id="categoryP"><a style="color: white" href="{% url 'sec-view' 'Wall Art' %}">Wall Art</a></p>
+
+            <p id="categoryP"><a style="color: white" href="{% url 'Raul-product' %}">All Products</a></p>
+
+            <p id="categoryP"><a style="color: white" href="{% url 'sec-view' 'Sale' %}">Sale</a></p>
             
-            <p id="categoryP">Sale</p>
-            
-            <p id="categoryP">Venue Bookings</p>
+            <p id="categoryP" style="color:white;">Venue Bookings</p>
 
         </div>
 
