--- a/Raul/static/Raul/CSS/landingCSS.css
+++ b/Raul/static/Raul/CSS/landingCSS.css
@@ -6,7 +6,7 @@ body{
     overflow: hidden;
     justify-items: center;
     align-items: center;
-    background: url('Images/landing.jpg');
+    background: url('Images/FullSize_MetGala2019_001.jpg');
     background-position: center;
     background-size: cover;
 }
