--- a/Raul/templates/Raul/home.html
+++ b/Raul/templates/Raul/home.html
@@ -588,7 +588,7 @@
     </div>
 
     <div class ="shopBanner">
-        <figcaption> shop for the perfect setup</figcaption>    
+        <figcaption> shop by category </figcaption>
     </div>
 
     <div class="tabsBanner">
