--- a/Raul/templates/Raul/categories.html
+++ b/Raul/templates/Raul/categories.html
@@ -27,7 +27,7 @@
 <div class="productContainer">
 
     <div class="row" id="scrollHere">
-        {% for product in products %}
+        {% for product in cat_products %}
         <div class="productCard">
             <div class="image">
                 <a href="{% url 'Raul-single' product.slug %}" >
